# create-game-server

./: .gitignore
rathena/: README.md
rathena/ansible/: .env.example  ansible.cfg  playbook.yml  pyproject.toml  requirements.yml
rathena/ansible/inventory/group_vars/: ragnarok.yml
rathena/ansible/tasks/: apt.yml  ddclient.yml  mysql.yml  rathena.yml
rathena/ansible/templates/: ddclient.conf.j2  rathena_server.service.j2
rathena/terraform/: .terraform.lock.hcl  _provider.tf  instance.tf  locals.tf  output.tf
terraform/: output.tf
terraria-server/ansible/: ansible.cfg  playbook.yaml  requirements.yaml
terraria-server/terraform/: instance.tf  keys.tf  locals.tf  network.tf
