[tool.poetry]
name = "rAthena full installer"
version = "0.1.0"
description = "Installs rAthena Server and dependencies"
authors = ["Leonardo Godoy <leonardoggavellar@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
ansible = "~7" # https://docs.ansible.com/ansible/latest/reference_appendices/release_and_maintenance.html
ansible-core = "~2.14"

[tool.poetry.dev-dependencies]